# argo

./: .gitignore  CHANGELOG.md  DEBUG_BROWSER.md  QUICKSTART.md  README.md  README_TESTS.md  SETUP_TWITTER_LOGIN.md  SETUP_TWITTER_REAL_CHROME.md  agent_sdk_research.md  architecture.md  bird_cli_test_report.md  main.py  mvp_plan.md  notes.md  pyproject.toml  pytest.ini  run_tests.sh  start_chrome.sh  stop_chrome.sh  task_plan.md  test_agent_sdk.py
argo/core/eventdriver/: event_publisher.py
argo/growth/cli/: main.py  reviewer.py
argo/growth/config/: influencers.yaml  settings.yaml  user_profile.yaml
argo/growth/core/: bird_client.py  browser_client.py  comment_generator.py  trend_analyzer.py  tweet_collector.py
argo/growth/storage/: file_store.py  models.py
argo/utils/: logger.py
recipe/Writter/: write_pipeline.md  writing_pipeline.md
recipe/Writter/20260126-YouGeng/: polish-notes.md  post-final.md  post-polished.md  post.md
recipe/Writter/20260126-YouGeng/xhs-images/: COMPLETION_REPORT.md  outline.md
recipe/Writter/20260127-Kimi25/: kimi-2.5-agi-direction-final.md  kimi-2.5-agi-direction-polished.md  kimi-2.5-agi-direction.md  my_note.md
recipe/Writter/20260127-Kimi25/xhs-images/: outline.md
recipe/Writter/20260129-WritingAssistant/: note.md  writing-workflow-polished.md  writing-workflow.md
recipe/Writter/20260129-WritingAssistant/xhs-images/: outline.md
tests/: __init__.py  conftest.py
tests/unit/: test_bird_client.py  test_comment_generator.py  test_file_store.py  test_models.py  test_trend_analyzer.py  test_tweet_collector.py
(+12 files in other folders)
